--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -1,84 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
+<?import java.net.URL?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.polyTweet.controller.LoginController"
-      prefHeight="400.0" prefWidth="600.0">
-    <FlowPane style="-fx-alignment: center;">
-        <ImageView fx:id="polytweet"
-                   fitHeight="50.0" fitWidth="50.0"
-                   preserveRatio="true"
-        >
+      alignment="CENTER">
+    <stylesheets>
+        <URL value="@/css/login.css"/>
+    </stylesheets>
+    <FlowPane styleClass="flowPolytweet" alignment="CENTER">
+        <ImageView fitHeight="100.0" fitWidth="100.0"
+                   preserveRatio="true">
             <Image url="@/img/polytweet.png"/>
         </ImageView>
-        <Label text="olyTweet"/>
+        <Label styleClass="polytweetLabel" text="olyTweet"/>
     </FlowPane>
-    <GridPane style="-fx-alignment: center">
+    <GridPane styleClass="gridLogin" vgap="10" alignment="CENTER">
         <rowConstraints>
             <RowConstraints percentHeight="50.0"/>
             <RowConstraints percentHeight="50.0"/>
         </rowConstraints>
-        <GridPane GridPane.columnIndex="0" GridPane.rowIndex="0">
-            <GridPane.margin>
-                <Insets top="50.0"/>
-            </GridPane.margin>
+        <GridPane hgap="20" GridPane.columnIndex="0" GridPane.rowIndex="0">
             <columnConstraints>
-                <ColumnConstraints percentWidth="40.0"/>
-                <ColumnConstraints percentWidth="30.0"/>
-                <ColumnConstraints percentWidth="30.0"/>
+                <ColumnConstraints halignment="RIGHT" prefWidth="200"/>
+                <ColumnConstraints prefWidth="200.0"/>
+                <ColumnConstraints prefWidth="200.0"/>
             </columnConstraints>
-            <Label text="Profile file"
+            <Label styleClass="loginLabel" text="Profile file"
                    GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <Label fx:id="filePath" text="No selected profile" GridPane.columnIndex="1" GridPane.rowIndex="0">
-            </Label>
-            <JFXButton text="Import"
-                       style="-jfx-button-type: RAISED;-fx-background-color: white;-fx-text-fill: black;-fx-start-margin: 10px"
-                       fx:id="importButton"
+            <Label fx:id="filePath" text="No selected profile" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <JFXButton styleClass="importButton" text="Import"
                        onAction="#importClick"
                        GridPane.columnIndex="2" GridPane.rowIndex="0"/>
         </GridPane>
-        <GridPane GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <GridPane hgap="20" GridPane.columnIndex="0" GridPane.rowIndex="1">
             <columnConstraints>
-                <ColumnConstraints percentWidth="40.0"/>
-                <ColumnConstraints percentWidth="60.0"/>
+                <ColumnConstraints halignment="RIGHT" prefWidth="200.0"/>
+                <ColumnConstraints prefWidth="350.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints percentHeight="25.0"/>
-                <RowConstraints percentHeight="25.0"/>
-                <RowConstraints percentHeight="25.0"/>
-                <RowConstraints percentHeight="25.0"/>
+                <RowConstraints valignment="CENTER" percentHeight="50.0"/>
+                <RowConstraints valignment="CENTER" percentHeight="50.0"/>
             </rowConstraints>
-            <Label text="Your IP address" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <JFXTextField style="-fx-label-float:true;-fx-background-color:transparent" fx:id="localIpField"
+            <Label styleClass="loginLabel" text="Your IP address" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <JFXTextField styleClass="loginField" fx:id="localIpField"
                           text="127.0.0.1" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-            <Label text="Network IP address" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-            <JFXTextField style="-fx-label-float:true;-fx-background-color:transparent" fx:id="networkIpField"
+            <Label styleClass="loginLabel" text="Network IP address" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <JFXTextField styleClass="loginField" fx:id="networkIpField"
                           GridPane.columnIndex="1" GridPane.rowIndex="2"/>
         </GridPane>
     </GridPane>
-    <FlowPane style="-fx-alignment: center;">
-        <VBox.margin>
-            <Insets>
-                <bottom>30</bottom>
-            </Insets>
-        </VBox.margin>
-        <JFXButton fx:id="loginButton" text="Login" disable="true" minWidth="100"
-                   style="-jfx-button-type: RAISED;-fx-background-color: green;-fx-text-fill: white;"
-                   onAction="#connexionClick"/>
-    </FlowPane>
-    <FlowPane style="-fx-alignment: center;">
-        <Label text="You don't have a profile?">
-            <FlowPane.margin>
-                <Insets right="50.0"/>
-            </FlowPane.margin>
-        </Label>
-        <JFXButton fx:id="registerButton" text="Register" onAction="#registerClick" minWidth="100"
-                   style="-jfx-button-type: RAISED;-fx-background-color: green;-fx-text-fill: white;"/>
+    <JFXButton alignment="CENTER" fx:id="loginButton" styleClass="loginButton"
+               onAction="#connexionClick" text="Login" disable="true"/>
+    <FlowPane styleClass="flowRegister" alignment="CENTER">
+        <Label text="You don't have a profile?"/>
+        <JFXButton styleClass="registerButton" text="Register" onAction="#registerClick"/>
     </FlowPane>
 </VBox>
