--- a/src/main/resources/fxml/profile.fxml
+++ b/src/main/resources/fxml/profile.fxml
@@ -2,30 +2,35 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import com.jfoenix.controls.JFXButton?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.polyTweet.controller.ProfilePersonalController"
-            prefHeight="400.0" prefWidth="600.0"
-            fx:id="profileContainer">
+            fx:controller="com.polyTweet.controller.ProfilePersonalController">
+    <stylesheets>
+        <URL value="@/css/profile.css"/>
+    </stylesheets>
     <top>
         <fx:include source="header.fxml"/>
     </top>
     <center>
-        <VBox>
+        <VBox spacing="50" styleClass="vboxProfile">
             <GridPane hgap="10" vgap="10">
                 <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT" percentWidth="25.0"/>
                     <ColumnConstraints percentWidth="25.0"/>
-                    <ColumnConstraints percentWidth="25.0"/>
-                    <ColumnConstraints percentWidth="25.0"/>
+                    <ColumnConstraints halignment="RIGHT" percentWidth="25.0"/>
                     <ColumnConstraints percentWidth="25.0"/>
                 </columnConstraints>
-                <Label fx:id="firstName" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <Label fx:id="lastName" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-                <Label id="followed" GridPane.columnIndex="2" GridPane.rowIndex="0" text="Personnes Suivies - "/>
-                <Label fx:id="followedNb" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
+                <Label fx:id="firstName" styleClass="nameLabel" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                <Label fx:id="lastName" styleClass="nameLabel" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <Label styleClass="followLabel" GridPane.columnIndex="2" GridPane.rowIndex="0" text="Personnes Suivies : "/>
+                <JFXButton styleClass="followedButton" fx:id="followedNb" onAction="#followClick" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
             </GridPane>
-            <Label fx:id="status"/>
-            <VBox fx:id="profilePosts"/>
+            <Label styleClass="statusLabel" fx:id="status"/>
+            <ScrollPane>
+                <VBox spacing="20" prefHeight="400" fx:id="profilePosts"/>
+            </ScrollPane>
         </VBox>
     </center>
 </BorderPane>
