--- a/src/main/resources/fxml/profileVisitor.fxml
+++ b/src/main/resources/fxml/profileVisitor.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.polyTweet.controller.ProfileVisitorController"
-            fx:id="profileContainer">
+            fx:controller="com.polyTweet.controller.ProfileVisitorController">
     <stylesheets>
         <URL value="@/css/profile.css"/>
     </stylesheets>
@@ -15,19 +13,21 @@
         <fx:include source="header.fxml"/>
     </top>
     <center>
-        <VBox>
+        <VBox spacing="50" styleClass="vboxProfile">
             <GridPane hgap="10" vgap="10">
                 <columnConstraints>
+                    <ColumnConstraints halignment="RIGHT" percentWidth="25.0"/>
                     <ColumnConstraints percentWidth="25.0"/>
-                    <ColumnConstraints percentWidth="25.0"/>
-                    <ColumnConstraints percentWidth="50.0"/>
+                    <ColumnConstraints halignment="CENTER" percentWidth="50.0"/>
                 </columnConstraints>
-                <Label fx:id="firstName" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <Label fx:id="lastName" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <Label fx:id="firstName" styleClass="nameLabel" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                <Label fx:id="lastName" styleClass="nameLabel" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
                 <Button fx:id="followButton" styleClass="followButton" onAction="#followClick" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
             </GridPane>
-            <Label fx:id="status"/>
-            <VBox fx:id="profilePosts"/>
+            <Label styleClass="statusLabel" fx:id="status"/>
+            <ScrollPane>
+                <VBox spacing="20" prefHeight="400"  fx:id="profilePosts"/>
+            </ScrollPane>
         </VBox>
     </center>
 </BorderPane>
