--- a/src/main/resources/fxml/settings.fxml
+++ b/src/main/resources/fxml/settings.fxml
@@ -2,9 +2,11 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
+<?import com.jfoenix.controls.JFXListView?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.polyTweet.controller.SettingsController">
@@ -15,7 +17,8 @@
         <fx:include source="header.fxml"/>
     </top>
     <center>
-        <VBox spacing="20" styleClass="vboxSettings" >
+        <VBox spacing="20" styleClass="vboxSettings">
+            <Label styleClass="settingsTitle, informationLabel" text="Your Information"/>
             <GridPane hgap="10" vgap="10">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="15.0"/>
@@ -32,12 +35,28 @@
                 <Label styleClass="settingsLabel, gridLabel" text="Last Name"
                        GridPane.columnIndex="0" GridPane.rowIndex="1"/>
                 <JFXTextField styleClass="settingsField" fx:id="lastNameField"
-                           GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                              GridPane.columnIndex="1" GridPane.rowIndex="1"/>
             </GridPane>
             <Label styleClass="settingsLabel" text="Status"
                    GridPane.columnIndex="0" GridPane.rowIndex="1"/>
             <JFXTextField promptText="Type your status..." styleClass="settingsField" fx:id="statusField"/>
             <JFXButton styleClass="validateSettings" text="Validate" onAction="#validateClick"/>
+            <Label styleClass="settingsTitle, neighborsLabel" text="Your Neighbors"/>
+            <HBox fx:id="hboxNeighbors" spacing="50"/>
+            <JFXTextField fx:id="ipField" styleClass="ipField" promptText="Neighbor IP"/>
+            <GridPane>
+                <columnConstraints>
+                    <ColumnConstraints halignment="CENTER" percentWidth="33"/>
+                    <ColumnConstraints halignment="CENTER" percentWidth="33"/>
+                    <ColumnConstraints halignment="CENTER" percentWidth="33"/>
+                </columnConstraints>
+                <JFXButton text="Join" styleClass="neighborButton" fx:id="joinButton" onAction="#joinClick"
+                           GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                <JFXButton text="Leave" styleClass="neighborButton" fx:id="leaveButton" onAction="#leaveClick"
+                           GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <JFXButton text="Refresh" styleClass="neighborButton" onAction="#refreshClick"
+                           GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+            </GridPane>
         </VBox>
     </center>
 </BorderPane>
