--- a/src/main/resources/fxml/followed.fxml
+++ b/src/main/resources/fxml/followed.fxml
@@ -8,7 +8,7 @@
 <?import java.net.URL?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.polyTweet.controller.SearchController">
+            fx:controller="com.polyTweet.controller.FollowedController">
     <stylesheets>
         <URL value="@/css/list.css"/>
     </stylesheets>
